<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="title">Title</string>
    <string name="released">Released</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="overview_text">Overview Text</string>
    <string name="home_favorite">Home Favorite</string>
    <string name="message_undo">Batalkan menghapus item?</string>
    <string name="message_ok">OK</string>
</resources>